<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background">

    <Button
        android:id="@+id/choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="chooseColors"
        android:text="@string/choose_colors"
        app:layout_constraintBottom_toTopOf="@id/rightGrid"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/newGameButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="548dp"
        android:onClick="newGame"
        android:text="@string/new_game"
        app:layout_constraintBottom_toTopOf="@+id/colorButtons"
        app:layout_constraintEnd_toStartOf="@id/choose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="exit"
        android:text="@string/menu"
        app:layout_constraintBottom_toBottomOf="@id/newGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/choose"
        app:layout_constraintTop_toTopOf="@id/newGameButton" />

    <GridView
        android:id="@+id/colorButtons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:horizontalSpacing="4dp"
        android:numColumns="4"
        android:verticalSpacing="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/confirm_button"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/leftGrid"
        app:layout_constraintVertical_weight="1" />

    <GridView
        android:id="@+id/rightGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:horizontalSpacing="2dp"
        android:numColumns="4"
        android:verticalSpacing="10dp"
        app:layout_constraintBottom_toTopOf="@id/colorButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/leftGrid"
        app:layout_constraintTop_toBottomOf="@+id/newGameButton"
        app:layout_constraintVertical_weight="4">

    </GridView>

    <GridView
        android:id="@+id/leftGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:horizontalSpacing="2dp"
        android:numColumns="4"
        android:verticalSpacing="10dp"
        app:layout_constraintBottom_toBottomOf="@id/rightGrid"
        app:layout_constraintEnd_toStartOf="@+id/rightGrid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGameButton"
        app:layout_constraintVertical_weight="4">


    </GridView>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:onClick="confirm"
        android:text="@string/confirm"
        app:layout_constraintBottom_toTopOf="@+id/remove_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1.3"
        app:layout_constraintStart_toEndOf="@+id/colorButtons"
        app:layout_constraintTop_toTopOf="@+id/colorButtons" />

    <Button
        android:id="@+id/remove_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:onClick="remove"
        android:text="@string/remove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/confirm_button"
        app:layout_constraintTop_toBottomOf="@+id/confirm_button" />

    <!--    <com.google.android.material.bottomappbar.BottomAppBar-->
    <!--        android:id="@+id/bottomAppBar2"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="bottom"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/rightGrid"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/rightGrid" />-->

</androidx.constraintlayout.widget.ConstraintLayout>